--- a/HakatonProject/Views/Home/Index.cshtml
+++ b/HakatonProject/Views/Home/Index.cshtml
@@ -1,8 +1,114 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    
+    var events = new[]
+    {
+        new { Name = "Культура", Start = "10:00", End = "12:00", Icon = "fa7-solid:museum" },
+        new { Name = "Спорт", Start = "12:30", End = "14:00", Icon = "fa7-solid:basketball" },
+        new { Name = "Музыка", Start = "15:00", End = "17:00", Icon = "fa7-solid:music" }
+    };
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="dashboard-container">
+    <nav class="sidebar">
+        <div class="sidebar-logo">
+            <img alt="logo" src="logo.png">
+            Active Graph
+        </div>
+        <ul class="sidebar-nav">
+            <li><a href="#"><span class="iconify" data-icon="mynaui:home"></span></a></li>
+            <li><a href="#"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></a></li>
+            <li><a href="#"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
+        </ul>
+        <div class="sidebar-profile">
+            <span class="iconify" data-icon="iconamoon:profile"></span>
+        </div>
+    </nav>
+
+    <main class="main-content">
+
+        <div class="widget welcome-card">
+            <div class="welcome-header">
+                <div class="user-icon"><span class="iconify" data-icon="iconamoon:profile"></span></div>
+                <h2>Привет, Андрей</h2>
+            </div>
+            <div class="sample-cards">
+                <div class="sample-card">
+                    <span class="iconify" data-icon="mynaui:home"></span>
+                    <p>Home</p>
+                </div>
+                <div class="sample-card">
+                    <span class="iconify" data-icon="mynaui:home"></span>
+                    <p>Home</p>
+                </div>
+                <div class="sample-card">
+                    <span class="iconify" data-icon="mynaui:home"></span>
+                    <p>Home</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="widget stats-card">
+            <div class="stats-header">
+                <h3>Статистика</h3>
+                <div class="date-range">
+                    <button id="btn-date"><span class="iconify" data-icon="mdi:navigate-before"></span></button>
+                    10.02-17.02
+                    <button id="btn-date"><span class="iconify" data-icon="mdi:navigate-next"></span></button>
+                </div>
+            </div>
+
+            <div class="chart-wrapper">
+                <canvas id="weekStatsChart"></canvas>
+            </div>
+        </div>
+
+        <div class="widget events-card">
+            <div class="header-ec"><h3><span class="iconify" data-icon="material-symbols:event-note-rounded"></span>
+                Мероприятия</h3></div>
+            <ul class="event-list">
+                @foreach (var e in events)
+                {
+                    <li>
+                        <div class="event-icon"><span class="iconify" data-icon="@e.Icon"></span></div>
+                        <div class="event-details">
+                            <strong>@e.Name</strong>
+                            <span>@e.Start - @e.End</span>
+                        </div>
+                    </li>
+                }
+                @* <li> *@
+                @* <div class="event-icon"><span class="iconify" data-icon="fluent:sport-16-filled"></span></div> *@
+                @* <div class="event-details"> *@
+                @* <strong>Спорт</strong> *@
+                @* <span>время начала-время конца</span> *@
+                @* </div> *@
+                @* </li> *@
+                @* <li> *@
+                @* <div class="event-icon"><span class="iconify" data-icon="mdi:volunteer"></span></div> *@
+                @* <div class="event-details"> *@
+                @* <strong>Волонтерство</strong> *@
+                @* <span>время начала-время конца</span> *@
+                @* </div> *@
+                @* </li> *@
+                @* <li> *@
+                @* <div class="event-icon"><span class="iconify" data-icon="material-symbols:science"></span></div> *@
+                @* <div class="event-details"> *@
+                @* <strong>Наука</strong> *@
+                @* <span>время начала-время конца</span> *@
+                @* </div> *@
+                @* </li> *@
+                @* <li> *@
+                @* <div class="event-icon"><span class="iconify" data-icon="mdi:court-hammer"></span></div> *@
+                @* <div class="event-details"> *@
+                @* <strong>Студ. самоуправ.</strong> *@
+                @* <span>время начала-время конца</span> *@
+                @* </div> *@
+                @* </li> *@
+            </ul>
+        </div>
+
+    </main>
 </div>
+
+
