--- a/HakatonProject/Views/Shared/_Layout.cshtml
+++ b/HakatonProject/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
         @RenderBody()
         
         <script src="scripts/chart.js" defer></script>
-        <script src="scripts/script.js" defer></script>
+        @* <script src="scripts/script.js" defer></script> *@
     </main>
 </div>
 
