add some razor pages

--- a/HakatonProject/Views/Home/Index.cshtml
+++ b/HakatonProject/Views/Home/Index.cshtml
@@ -85,14 +85,14 @@
 <div class="dashboard-container">
     <nav class="sidebar">
         <div class="sidebar-logo">
-            <img alt="logo" src="logo.png">
+            <img alt="logo" src="assets/logo.png">
             Active Graph
         </div>
         <ul class="sidebar-nav">
-            <li><a href="#"><span class="iconify" data-icon="mynaui:home"></span></a></li>
-            <li><a href="#"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></a></li>
-            <li><a href="#"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
-        </ul>
+                <li><a href="/" style="color: #fff;"><span class="iconify" data-icon="mynaui:home"></span></a></li>
+                <li><a href="/Interest"><span class="iconify" data-icon="material-symbols:interests-rounded"></span></a></li>
+                <li><a href="/EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
+            </ul>
         <div class="sidebar-profile">
             <span class="iconify" data-icon="iconamoon:profile"></span>
         </div>
