fix account logo in home page

--- a/HakatonProject/Views/Home/Index.cshtml
+++ b/HakatonProject/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
                 <li><a href="/EventsPage"><span class="iconify" data-icon="material-symbols:event-note-rounded"></span></a></li>
             </ul>
         <div class="sidebar-profile">
-            <span class="iconify" data-icon="iconamoon:profile"></span>
+                <a href="/Analytics"><span class="iconify" data-icon="iconamoon:profile"></span></a>
         </div>
     </nav>
 
